--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "agora-token": "^2.0.5",
+    "agora-access-token": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
